<resources>
    <string name="app_name">FootballApp</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_profile">Hồ sơ của tôi</string>
    <string name="nav_setting">Thay đổi mật khẩu</string>
    <string name="nav_favourite">Yêu thích</string>
    <string name="nav_tournament">Giải đấu</string>

    <string name="nav_football">Football App là gì</string>
    <string name="nav_polycy">Chính sách bảo mật</string>
    <string name="nav_term_of_use">Điều khoản sử dụng</string>
    <string name="nav_contact">Liên hệ</string>
</resources>