<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group
        android:id="@+id/top_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title= "@string/nav_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Đăng xuất" />
    </group>

    <group
        android:id="@+id/bottom_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_ball"
            android:icon="@drawable/ic_ball"
            android:title="@string/nav_football" />

        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_policy"
            android:title="@string/nav_polycy" />
        <item
            android:id="@+id/nav_term_of_use"
            android:icon="@drawable/ic_term_of_use"
            android:title="@string/nav_term_of_use"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contact" />
    </group>


</menu>